--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ requires-python = ">=3.11"
 dependencies = [
   "pydantic>=2,<3",
   "python-dotenv>=1,<2",
+  "langchain>=1,<2",
+  "langchain-community>=0.4,<1",
+  "langchain-huggingface>=1,<2",
+  "langchain-text-splitters>=0.3,<1",
+  "sentence-transformers>=2,<3",
+  "faiss-cpu>=1,<2",
 ]
 
 [project.optional-dependencies]
